--- a/css/ass48e.css
+++ b/css/ass48e.css
@@ -73,36 +73,70 @@ article footer {
     text-align: center;
 }
 #container2 h1 {
-  color:#223B7F;
+    color:#223B7F;
 }
 #container2 h2 {
-  font-size: 2rem;
-  font-weight: 800;
-  margin-bottom: 40px;
+    font-size: 2rem;
+    font-weight: 800;
+    margin-bottom: 40px;
 }
 #container2 ul {
-  display: flex;
-  list-style: none;
+    display: flex;
+    list-style: none;
 }
 #container2 li {
-  flex: 1 1 250px;
-  padding: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  text-align: left;
+    flex: 1 1 250px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    text-align: left;
 }
 #container2 li img {
-  width: 60px;
-  height: auto;
-  margin-bottom: 20px;
+    width: 60px;
+    height: auto;
+    margin-bottom: 20px;
 }
 #container2 li header {
-  font-size: 1.3rem;
-  font-weight: 700;
-  margin-bottom: 12px;
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-bottom: 12px;
 }
 #container2 li p {
-  font-size: 1rem;
-  line-height: 1.5;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+footer {
+    background-color: #697077;
+    color: #fff;
+    padding: 30px 40px;
+}
+footer ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    background-color: #697077;
+}
+footer ul li:first-child img {
+    height: 40px;
+    width: auto;
+    background-color: #697077;
+    display: block;
+}
+footer ul li:nth-child(2) {
+    flex: 1;
+    text-align: center;
+    font-size: 0.7rem;
+    color: #ccc;
+    background-color: #697077;
+    display: block;
+}
+footer ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+    background-color: #697077;
+    display: block;
+    padding-left: 20px;
 }
